--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@heroicons/react": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-indiana-drag-scroll": "^2.2.0"
+    "react-indiana-drag-scroll": "^2.2.0",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
