feat: add MDX functionality

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@fontsource/montserrat": "^4.5.14",
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
+    "@mdx-js/react": "^2.2.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "gatsby": "^5.5.0",
-    "gatsby-plugin-feed": "^5.5.0",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-manifest": "^5.5.0",
+    "gatsby-plugin-mdx": "^5.5.0",
     "gatsby-plugin-sharp": "^5.5.0",
     "gatsby-remark-images": "^7.5.0",
     "gatsby-remark-prismjs": "^7.5.0",
