--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-indiana-drag-scroll": "^2.2.0",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
