--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.11.0",
+    "react-twitter-embed": "^4.0.4",
     "remark": "^14.0.2",
     "remark-external-links": "^9.0.1",
     "remark-html": "^15.0.2"
