--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -43,6 +44,8 @@
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
   }
 }
