--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
   }
