--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "date-fns": "^2.29.3",
     "eslint-config-next": "13.1.6",
@@ -35,6 +34,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/react": "18.2.37",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.34.0",
@@ -49,6 +49,6 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5"
+    "typescript": "4.9.5"
   }
 }
