--- a/package.json
+++ b/package.json
@@ -1,54 +1,27 @@
 {
-  "name": "portfolio-website-next-mui",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watch"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.8",
-    "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
-    "@types/react-dom": "18.0.10",
-    "date-fns": "^2.29.3",
-    "eslint-config-next": "13.1.6",
-    "gray-matter": "^4.0.3",
-    "next": "13.1.6",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-card-flip": "^1.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.12.0",
-    "react-twitter-embed": "^4.0.4",
-    "remark": "^14.0.2",
-    "remark-external-links": "^9.0.1",
-    "remark-html": "^15.0.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/react": "18.2.37",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.34.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3",
-    "typescript": "4.9.5"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0"
   }
 }
