--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "bright": "^0.8.4",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
