--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "bright": "^0.8.4",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
+    "puppeteer": "^21.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
