--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-spring": "^9.7.3",
     "remark-gfm": "3.0.1"
   },
   "devDependencies": {
