--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "count": "node ./scripts/count.js"
   },
   "dependencies": {
     "axios": "^1.6.5",
@@ -32,6 +33,7 @@
     "postcss": "^8",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "slocjs": "^1.1.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
