--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "axios": "^1.6.5",
     "bright": "^0.8.4",
+    "clipboard-copy": "^4.0.1",
     "gray-matter": "^4.0.3",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-spring": "^9.7.3",
-    "remark-gfm": "3.0.1"
+    "remark-gfm": "3.0.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/node": "^20",
