--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
