--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "count": "node ./scripts/count.js"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.0.5",
     "axios": "^1.6.5",
     "bright": "^0.8.4",
     "clipboard-copy": "^4.0.1",
@@ -30,7 +31,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "daisyui": "^4.6.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
