--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.6.5",
     "bright": "^0.8.4",
     "clipboard-copy": "^4.0.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
     "gray-matter": "^4.0.3",
     "next": "^14.2.3",
     "next-mdx-remote": "^4.4.1",
@@ -23,7 +25,8 @@
     "react-icons": "^5.0.1",
     "react-spring": "^9.7.3",
     "remark-gfm": "3.0.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
