--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
     "count": "node ./scripts/count.js"
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "@radix-ui/themes": "^3.0.5",
     "bright": "^0.8.4",
     "clipboard-copy": "^4.0.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
     "gray-matter": "^4.0.3",
     "next": "^14.2.3",
     "next-mdx-remote": "^4.4.1",
-    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-spring": "^9.7.3",
     "remark-gfm": "3.0.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "daisyui": "^4.6.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "slocjs": "^1.1.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
