--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/themes": "^3.0.5",
     "bright": "^0.8.4",
     "clipboard-copy": "^4.0.1",
+    "framer-motion": "^11.2.6",
     "gray-matter": "^4.0.3",
     "next": "^14.2.3",
     "next-mdx-remote": "^4.4.1",
