--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gray-matter": "^4.0.3",
     "next": "^14.2.3",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
