--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "count": "node ./scripts/count.js"
+    "count": "node ./scripts/count.js",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "axios": "^1.7.2",
