--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "clipboard-copy": "^4.0.1",
     "framer-motion": "^11.2.6",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.379.0",
     "next": "^14.2.3",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.0.1",
     "remark-gfm": "3.0.1",
     "slugify": "^1.6.6"
   },
