--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,13 +4,8 @@
   "tabWidth": 2,
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "importOrder": [
-    "^react",
-    "^next",
-    "<THIRD_PARTY_MODULES>",
-    "@/(.*)$",
-    "^[./]"
-  ],
+  "importOrderSeparation": true,
+  "importOrder": ["<THIRD_PARTY_MODULES>", "@/(.*)$", "^[./]"],
   "plugins": [
     "@trivago/prettier-plugin-sort-imports",
     "prettier-plugin-tailwindcss"
